Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <h1>Encontre gente certa, rápido.</h1>
       <p class="lead">
         Para <b>Empresas</b>: publique a vaga, receba <b>matches compatíveis em minutos</b> e reduza o tempo de contratação.<br>
-        Para <b>candidatos</b>: encontre vagas que combinam com seu perfil, evolua com trilhas e tenha o apoio <b>Bem+Match</b>.
+        Para <b>candidatos</b>: vagas alinhadas ao perfil, trilhas de evolução e o apoio <b>Bem+Match</b>.
       </p>
       <div style="display:flex;gap:10px;flex-wrap:wrap">
         <a class="btn primary" href="#planos-empresas">Sou empresa</a>
@@ -189,7 +189,9 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <p>Mais candidatos prontos e engajados, melhor experiência no processo e indicadores de participação no Bem+ (insights de clima e adaptação).</p>
       </div>
     </div>
-    <p class="sub" style="margin-top:8px">O Bem+Match é um diferencial do MatchWork e evolui com parceiros (palestras, mentorias e conteúdos especializados).</p>
+    <p class="sub" style="margin-top:8px">
+      O engajamento no Bem+Match sinaliza <b>prontidão e comprometimento</b> do candidato — menos entrevistas improdutivas e menor tempo de contratação.
+    </p>
   </div>
 </section>
 
@@ -233,22 +235,24 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <div class="price-card" style="grid-column:1/-1">
         <div class="price-title"><h3 style="margin:0">Empresas — One-Shot</h3></div>
         <div class="price"><span class="amount">R$400</span><span class="small">/vaga</span></div>
-        <p class="subprice">Vaga ativa até preencher (<b>máx. 3 meses</b>) + indicações automáticas de compatíveis.</p>
+        <p class="subprice">
+          Vaga ativa até preencher (<b>máx. 3 meses</b>), indicações automáticas de compatíveis e <b>sem multa de cancelamento</b>.
+        </p>
         <a class="btn primary" href="#contato">Publicar vaga única</a>
       </div>
     </div>
   </div>
 </section>
 
-<!-- PROVA SOCIAL (genérica) -->
+<!-- PROVA SOCIAL (genérica com micro-métricas) -->
 <section class="band section">
   <div class="container">
     <h2>Em validação</h2>
     <p class="sub">O MatchWork está em fase de testes com empresas e organizações da região.</p>
     <div style="display:flex;gap:20px;flex-wrap:wrap;justify-content:center;margin-top:18px">
-      <div class="card" style="min-width:220px;text-align:center">Avaliações iniciais positivas</div>
-      <div class="card" style="min-width:220px;text-align:center">Processos em construção</div>
-      <div class="card" style="min-width:220px;text-align:center">Parcerias educacionais em exploração</div>
+      <div class="card" style="min-width:220px;text-align:center">1º match: <b>&lt; 24h</b> (pilotos)</div>
+      <div class="card" style="min-width:220px;text-align:center">Trilhas iniciadas: <b>em crescimento</b></div>
+      <div class="card" style="min-width:220px;text-align:center">Satisfação do processo: <b>em coleta</b></div>
     </div>
   </div>
 </section>
