Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ h1{font-size:clamp(28px, 6vw, 50px);line-height:1.1;margin:0 0 16px}
 <!-- NAV -->
 <div class="topbar">
   <div class="container inner">
-    <a class="brand" href="#"><img src="assets/logo.png" alt="Logo MatchWork"></a>
+    <a class="brand" href="#"><img src="assets/logo-purple.PNG" alt="Logo MatchWork"></a>
     <div class="navwrap">
       <button class="menu-toggle" aria-label="Menu">
         <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
