Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MatchWork — Conectando talentos e empresas</title>
 <meta name="description" content="MatchWork conecta candidatos e empresas com matching rápido, trilhas de capacitação, apoio emocional (Bem+) e gamificação (MatchPoints) para aumentar engajamento.">
-<link rel="icon" href="assets/logo.png" type="image/png">
+<link rel="icon" href="assets/logo-purple.PNG" type="image/png">
 <meta name="theme-color" content="#6f3aff">
 <style>
 :root{
@@ -110,7 +110,7 @@ h1{font-size:clamp(28px, 6vw, 50px);line-height:1.1;margin:0 0 16px}
 <header class="hero">
   <div class="container">
     <h1>Encontre gente certa, rápido.</h1>
-    <p class="lead">Para <b>empresas</b>: publique a vaga, receba <b>matches compatíveis</b> em minutos e conduza tudo num fluxo simples.<br>
+    <p class="lead">Para <b>empresas</b>: publique a vaga, receba <b>matches compatíveis</b> em minutos.<br>
     Para <b>candidatos</b>: vagas que combinam com seu perfil, trilhas de aprendizado e apoio <b>Bem+</b>.</p>
     <a class="btn primary" href="#planos">Ver planos</a>
     <a class="btn ghost" href="#contato">Agendar conversa</a>
@@ -219,9 +219,7 @@ h1{font-size:clamp(28px, 6vw, 50px);line-height:1.1;margin:0 0 16px}
 const toggle=document.querySelector('.menu-toggle');
 const links=document.querySelector('.nav-links');
 if(toggle && links){
-  toggle.addEventListener('click',()=>{
-    links.classList.toggle('open');
-  });
+  toggle.addEventListener('click',()=>{links.classList.toggle('open');});
 }
 </script>
 </body>
