Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   --brand:#6f3aff; --brand-2:#8c66ff; --paper:#f8f7ff;
   --logoH: clamp(56px, 10vw, 88px);
 }
-*{box-sizing:border-box}
+{box-sizing:border-box}
 html{scroll-behavior:smooth}
 body{margin:0;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
 a{text-decoration:none;color:var(--brand)}
