--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 :root{
   --bg:#fff; --ink:#121426; --muted:#646b86; --line:#e9e9f2;
   --brand:#6f3aff; --brand-2:#8a67ff; --paper:#f8f7ff;
-  --logoH: clamp(64px, 10vw, 96px);
+  --logoH: clamp(48px, 8vw, 72px); /* logo mais proporcional */
 }
 *{box-sizing:border-box}
 html{scroll-behavior:smooth}
@@ -51,44 +51,16 @@ a{text-decoration:none;color:var(--brand)}
 h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin:0 0 10px}
 .lead{font-size:18px;color:var(--muted);max-width:720px;margin:0 0 20px}
 
-/* PHONE MOCKUP (like/dislike) */
-.phone{
-  width:100%; max-width:360px; margin:0 auto;
-  border:1px solid #ddd; border-radius:28px; background:#fff;
-  box-shadow:0 20px 60px rgba(24,27,51,.10);
-  padding:14px 12px 16px; position:relative;
+/* MOCKUP IMG (responsivo e proporcional) */
+.mockup{display:flex;justify-content:center;align-items:center}
+.mockup img{
+  width: min(36vw, 420px);
+  max-width: 100%;
+  height: auto;
+  display:block;
+  border-radius:20px;
+  box-shadow:0 18px 40px rgba(0,0,0,.12);
 }
-.phone-notch{
-  position:absolute; top:8px; left:50%; transform:translateX(-50%);
-  width:120px; height:10px; border-radius:8px; background:#111;
-}
-.phone-screen{
-  border:1px solid var(--line); border-radius:20px; padding:16px; background:#fff;
-}
-.card-candidato{
-  border:1px solid var(--line); border-radius:16px; padding:14px; background:#fff;
-  box-shadow:0 2px 10px rgba(0,0,0,.03);
-}
-.card-head{display:flex;gap:12px;align-items:center;margin-bottom:10px}
-.card-avatar{
-  width:56px; height:56px; border-radius:12px; background:linear-gradient(135deg,#ede8ff,#f8f7ff);
-  border:1px solid #e6e2ff;
-}
-.card-lines div{height:10px;border-radius:999px;background:#6f3aff14;margin-bottom:8px}
-.card-lines div:nth-child(1){width:70%}
-.card-lines div:nth-child(2){width:50%}
-.card-lines div:nth-child(3){width:40%}
-.actions{display:flex; justify-content:space-between; align-items:center; margin-top:14px}
-.btn-like,.btn-dislike{
-  display:flex; align-items:center; justify-content:center;
-  width:64px; height:64px; border-radius:999px; border:2px solid #e9e6ff; background:#fff; cursor:pointer;
-  transition:.15s; box-shadow:0 4px 14px rgba(0,0,0,.05)
-}
-.btn-like:hover{border-color:#cfc4ff; transform:translateY(-1px)}
-.btn-dislike:hover{border-color:#f1e0ff; transform:translateY(-1px)}
-.btn-like svg{stroke:#34c759}
-.btn-dislike svg{stroke:#ff3b30}
-.swipe-hint{ text-align:center;color:#888;font-size:12px;margin-top:10px }
 
 /* SECTIONS */
 .section{padding:68px 0}
@@ -118,7 +90,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 .input{padding:12px;border:1px solid var(--line);border-radius:10px;font-size:16px;background:#fff}
 .input::placeholder{color:#8a8a8a}
 
-/* STICKY */
+/* STICKY CTA (mobile) */
 .sticky-cta{position:fixed;left:0;right:0;bottom:0;z-index:40;background:#fff;border-top:1px solid var(--line);padding:10px 16px;display:none;gap:10px}
 .sticky-cta a{flex:1;text-align:center}
 
@@ -138,6 +110,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 /* MOBILE */
 @media (max-width:980px){
   .hero-grid{grid-template-columns:1fr}
+  .mockup img{ width: min(88vw, 340px); } /* mockup proporcional no mobile */
   .grid-3,.grid-2,.pricing{grid-template-columns:1fr}
   .menu-toggle{display:block}
   .nav-links{display:none;position:absolute;left:0;right:0;top:calc(100% + 1px);background:#fff;border-top:1px solid var(--line);padding:10px 20px;box-shadow:0 10px 30px rgba(0,0,0,.06)}
@@ -191,7 +164,6 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     </div>
   </div>
 </header>
-
 
 <!-- O QUE FAZ -->
 <section id="o-que-faz" class="band section">
@@ -302,6 +274,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   </div>
 </section>
 
+<!-- CONTATO -->
 <section id="contato" class="section">
   <div class="container">
     <h2 style="text-align:center">Fale com a gente</h2>
@@ -317,8 +290,15 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <option value="organizacao">Organização/Parceria</option>
       </select>
       <textarea class="input" name="mensagem" rows="4" placeholder="Como podemos ajudar?" required aria-label="Sua mensagem"></textarea>
-      <button class="btn primary" type="submit">Enviar</button>
+      <!-- FormSubmit options -->
+      <input type="hidden" name="_subject" value="Novo contato — Site MatchWork">
+      <input type="hidden" name="_template" value="box">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="https://rodrigovolpatob-blip.github.io/MatchWork/#contato-ok">
+      <input type="text" name="_honey" style="display:none">
+      <button class="btn primary" type="submit" style="width:max-content">Enviar</button>
     </form>
+    <p id="contato-ok" class="sub" style="margin-top:12px;display:none">Obrigado! Sua mensagem foi enviada.</p>
   </div>
 </section>
 
