--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 :root{
   --bg:#fff; --ink:#121426; --muted:#646b86; --line:#e9e9f2;
   --brand:#6f3aff; --brand-2:#8a67ff; --paper:#f8f7ff;
-  --logoH: clamp(48px, 8vw, 72px); /* logo mais proporcional */
+  --logoH: clamp(56px, 7.2vw, 80px); /* logo levemente maior em desktop largo */
 }
 *{box-sizing:border-box}
 html{scroll-behavior:smooth}
@@ -51,10 +51,13 @@ a{text-decoration:none;color:var(--brand)}
 h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin:0 0 10px}
 .lead{font-size:18px;color:var(--muted);max-width:720px;margin:0 0 20px}
 
-/* MOCKUP IMG (responsivo e proporcional) */
-.mockup{display:flex;justify-content:center;align-items:center}
+/* MOCKUP (imagem final) — responsivo e proporcional */
+.mockup{
+  display:flex;justify-content:center;align-items:center;
+  margin-top:12px; /* respiro extra */
+}
 .mockup img{
-  width: min(36vw, 420px);
+  width: min(34vw, 400px); /* menor em desktop médio/grande */
   max-width: 100%;
   height: auto;
   display:block;
@@ -107,16 +110,19 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   display:none;z-index:999;font-size:15px;
 }
 
-/* MOBILE */
+/* MOBILE ajustes extras (respiro e mockup) */
 @media (max-width:980px){
   .hero-grid{grid-template-columns:1fr}
-  .mockup img{ width: min(88vw, 340px); } /* mockup proporcional no mobile */
+  .mockup img{ width: min(86vw, 330px); } /* mockup mais contido no mobile */
   .grid-3,.grid-2,.pricing{grid-template-columns:1fr}
   .menu-toggle{display:block}
   .nav-links{display:none;position:absolute;left:0;right:0;top:calc(100% + 1px);background:#fff;border-top:1px solid var(--line);padding:10px 20px;box-shadow:0 10px 30px rgba(0,0,0,.06)}
   .nav-links.open{display:flex;flex-direction:column;gap:12px}
   .nav-links .btn.primary{width:100%;text-align:center}
   .sticky-cta{display:flex}
+  .section{ padding:64px 0; } /* respiro extra mobile */
+  .band.section{ padding:64px 0; }
+  .lead{ margin-bottom:22px; }
 }
 </style>
 </head>
@@ -138,7 +144,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <a href="#como-funciona">Como funciona</a>
       <a href="#bemplus">Bem+Match</a>
       <a href="#planos">Planos</a>
-      <a class="btn primary" href="#contato">Falar agora</a>
+      <a class="btn primary" href="#contato" aria-label="Fale com a equipe MatchWork">Falar agora</a>
     </nav>
   </div>
 </div>
@@ -153,8 +159,8 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         Para <b>candidatos</b>: vagas alinhadas ao perfil, trilhas de evolução e o apoio <b>Bem+Match</b>.
       </p>
       <div style="display:flex;gap:10px;flex-wrap:wrap">
-        <a class="btn primary" href="#planos-empresas">Sou empresa</a>
-        <a class="btn ghost" href="#planos-candidato">Sou candidato</a>
+        <a class="btn primary" href="#planos-empresas" aria-label="Ver planos para empresas">Sou empresa</a>
+        <a class="btn ghost" href="#planos-candidato" aria-label="Ver planos para candidatos">Sou candidato</a>
       </div>
     </div>
 
@@ -229,8 +235,8 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <div class="li">Indicações automáticas de compatíveis</div>
         <div class="li">Suporte por e-mail/WhatsApp</div>
         <div style="display:flex;gap:8px;margin-top:10px;flex-wrap:wrap">
-          <a class="btn primary" href="#contato">Assinar mensal</a>
-          <a class="btn ghost" href="#contato">Assinar anual</a>
+          <a class="btn primary" href="#contato" aria-label="Assinar plano mensal para empresas">Assinar mensal</a>
+          <a class="btn ghost" href="#contato" aria-label="Assinar plano anual para empresas">Assinar anual</a>
         </div>
       </div>
 
@@ -243,8 +249,8 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <div class="li">Relatório de carreira</div>
         <div class="li">Acesso ao Bem+Match e trilhas</div>
         <div style="display:flex;gap:8px;margin-top:10px;flex-wrap:wrap">
-          <a class="btn primary" href="#contato">Assinar mensal</a>
-          <a class="btn ghost" href="#contato">Assinar anual</a>
+          <a class="btn primary" href="#contato" aria-label="Assinar plano mensal candidato">Assinar mensal</a>
+          <a class="btn ghost" href="#contato" aria-label="Assinar plano anual candidato">Assinar anual</a>
         </div>
       </div>
 
@@ -255,7 +261,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <p class="subprice">
           Vaga ativa até preencher (<b>máx. 3 meses</b>), indicações automáticas de compatíveis e <b>sem multa de cancelamento</b>.
         </p>
-        <a class="btn primary" href="#contato">Publicar vaga única</a>
+        <a class="btn primary" href="#contato" aria-label="Publicar vaga única One-Shot">Publicar vaga única</a>
       </div>
     </div>
   </div>
@@ -265,7 +271,10 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 <section class="band section">
   <div class="container">
     <h2>Em validação</h2>
-    <p class="sub">O MatchWork está em fase de testes com empresas e organizações da região.</p>
+    <p class="sub">
+      O MatchWork está em fase de testes com empresas e organizações da região
+      <b>(5+ conversas ativas / 3 pilotos em andamento)</b>.
+    </p>
     <div style="display:flex;gap:20px;flex-wrap:wrap;justify-content:center;margin-top:18px">
       <div class="card" style="min-width:220px;text-align:center">1º match: <b>&lt; 24h</b> (pilotos)</div>
       <div class="card" style="min-width:220px;text-align:center">Trilhas iniciadas: <b>em crescimento</b></div>
@@ -280,6 +289,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <h2 style="text-align:center">Fale com a gente</h2>
     <p class="sub">Quer pilotar o MatchWork ou tirar dúvidas? Envie sua mensagem.</p>
 
+    <!-- Envia para seu e-mail via FormSubmit -->
     <form action="https://formsubmit.co/rodrigovolpatob@gmail.com" method="POST" class="form" aria-label="Formulário de contato">
       <input class="input" name="nome" placeholder="Seu nome" required aria-label="Seu nome">
       <input class="input" type="email" name="email" placeholder="E-mail" required aria-label="Seu e-mail">
@@ -296,7 +306,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_next" value="https://rodrigovolpatob-blip.github.io/MatchWork/#contato-ok">
       <input type="text" name="_honey" style="display:none">
-      <button class="btn primary" type="submit" style="width:max-content">Enviar</button>
+      <button class="btn primary" type="submit" style="width:max-content" aria-label="Enviar formulário de contato">Enviar</button>
     </form>
     <p id="contato-ok" class="sub" style="margin-top:12px;display:none">Obrigado! Sua mensagem foi enviada.</p>
   </div>
@@ -308,8 +318,8 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 
 <!-- STICKY FOOTER CTA (mobile) -->
 <div class="sticky-cta">
-  <a class="btn ghost" href="#planos">Ver planos</a>
-  <a class="btn primary" href="#contato">Falar agora</a>
+  <a class="btn ghost" href="#planos" aria-label="Ver planos">Ver planos</a>
+  <a class="btn primary" href="#contato" aria-label="Falar agora com a equipe MatchWork">Falar agora</a>
 </div>
 
 <!-- WhatsApp Float -->
@@ -337,7 +347,7 @@ if(toggle && links){
   });
 }
 
-/* Toast simples */
+/* Toast simples (exibição ao enviar) */
 (function(){
   const form = document.querySelector('form[action^="https://formsubmit.co/"]');
   const toast = document.getElementById('toast');
