--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MatchWork — Conectando talentos e empresas</title>
-<meta name="description" content="MatchWork conecta candidatos e empresas com matching rápido (like/dislike), trilhas de capacitação, Bem+ (apoio emocional) e gamificação (MatchPoints).">
+<meta name="description" content="MatchWork conecta empresas e candidatos com matching like/dislike, trilhas de capacitação, Bem+ (apoio emocional) e gamificação (MatchPoints).">
 <link rel="icon" href="assets/logo-purple.PNG" type="image/png">
 <meta name="theme-color" content="#6f3aff">
 
-<!-- Google tag (gtag.js) – GA4 MatchWork -->
+<!-- GA4 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWLCFPYQ7J"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -19,14 +19,14 @@
 
 <style>
 :root{
-  --bg:#ffffff; --ink:#0f1222; --muted:#636985; --line:#e8e8ef;
-  --brand:#6f3aff; --brand-2:#8c66ff; --paper:#f8f7ff;
-  --logoH: clamp(48px, 8vw, 88px);
+  --bg:#ffffff; --ink:#0f1222; --muted:#606782; --line:#e9e9f0;
+  --brand:#6f3aff; --brand-2:#8c66ff; --paper:#f7f6ff;
+  --logoH: clamp(52px, 9vw, 88px);
 }
 *{box-sizing:border-box}
 html{scroll-behavior:smooth}
 body{margin:0;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
-a{text-decoration:none;color:var(--brand)}
+a{color:var(--brand);text-decoration:none}
 a:focus,button:focus,input:focus,select:focus,textarea:focus{outline:2px solid var(--brand-2);outline-offset:2px}
 .container{max-width:1180px;margin:0 auto;padding:0 20px}
 
@@ -38,7 +38,7 @@ a:focus,button:focus,input:focus,select:focus,textarea:focus{outline:2px solid v
 .menu-toggle{display:none;border:1px solid var(--line);background:#fff;border-radius:10px;padding:8px 10px;cursor:pointer}
 .menu-toggle svg{display:block}
 .nav-links{display:flex;align-items:center;gap:18px}
-.nav-links a{font-weight:600;color:var(--ink);opacity:.9}
+.nav-links a{font-weight:600;color:var(--ink);opacity:.95}
 .nav-links a:hover{color:var(--brand)}
 
 /* BUTTONS */
@@ -49,11 +49,10 @@ a:focus,button:focus,input:focus,select:focus,textarea:focus{outline:2px solid v
 .btn.ghost:hover{background:#f3efff}
 
 /* HERO */
-.hero{padding:78px 0 40px;background:radial-gradient(900px 300px at 50% -120px, rgba(111,58,255,.12), transparent 60%),#fff}
+.hero{padding:82px 0 44px;background:radial-gradient(900px 300px at 50% -120px, rgba(111,58,255,.12), transparent 60%),#fff}
 .hero-grid{display:grid;grid-template-columns:1.05fr 1fr;gap:32px;align-items:center}
-h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin:0 0 12px}
+h1{font-size:clamp(30px,6vw,56px);line-height:1.05;letter-spacing:-.4px;margin:0 0 12px}
 .lead{font-size:18px;color:var(--muted);max-width:720px;margin:0 0 20px}
-.badge{display:inline-block;padding:6px 10px;border-radius:999px;font-size:12px;font-weight:800;background:#efeaff;color:#3f21ba;border:1px solid #e1d8ff}
 
 /* MOCKUP */
 .mock{border:1px solid var(--line);border-radius:24px;background:#fff;box-shadow:0 22px 60px rgba(0,0,0,.08);padding:12px}
@@ -62,15 +61,15 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 /* SECTIONS */
 .section{padding:70px 0}
 .band{background:var(--paper);border-top:1px solid var(--line);border-bottom:1px solid var(--line)}
-.section h2{text-align:center;color:#1a1d33;font-size:clamp(22px, 3.5vw, 34px);letter-spacing:-.3px;margin:0 0 10px}
+.section h2{text-align:center;color:#1a1d33;font-size:clamp(22px,3.5vw,34px);letter-spacing:-.3px;margin:0 0 10px}
 .section p.sub{color:var(--muted);text-align:center;margin:0 auto 12px;max-width:780px}
 
 /* GRIDS */
 .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:16px;margin-top:16px}
 .grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:16px;margin-top:16px}
-.card{padding:18px;border-radius:14px;border:1px solid var(--line);background:#fff;box-shadow:0 2px 10px rgba(0,0,0,.03);text-align:left}
+.card{padding:18px;border-radius:14px;border:1px solid var(--line);background:#fff;box-shadow:0 2px 10px rgba(0,0,0,.03)}
 .card h3{margin:0 0 6px;font-size:18px}
-.card p{margin:0;color:#3a3950;font-size:15px}
+.card p{margin:0;color:#333949;font-size:15px}
 
 /* PRICING */
 .pricing{display:grid;grid-template-columns:repeat(2,1fr);gap:16px;margin-top:16px}
@@ -79,7 +78,7 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 .price{display:flex;align-items:baseline;gap:6px;margin:6px 0 10px}
 .amount{font-size:36px;font-weight:900;color:var(--brand)}
 .small{color:var(--muted);font-size:14px}
-.li{margin:6px 0;color:#3a3950;font-size:15px}
+.li{margin:6px 0;color:#333949;font-size:15px}
 
 /* FORM */
 .form{max-width:640px;margin:16px auto 0;display:grid;gap:10px}
@@ -89,7 +88,7 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 /* TOAST */
 #toast{display:none;position:fixed;left:50%;transform:translateX(-50%);bottom:18px;background:#1f2337;color:#fff;padding:10px 14px;border-radius:10px;box-shadow:0 10px 20px rgba(0,0,0,.18);z-index:999;font-size:14px}
 
-/* WHATS APP FLOAT */
+/* WHATS */
 .whats{position:fixed;right:18px;bottom:18px;z-index:90;width:58px;height:58px;border-radius:999px;background:var(--brand);display:flex;align-items:center;justify-content:center;color:#fff;border:none;box-shadow:0 10px 24px rgba(111,58,255,.35);cursor:pointer}
 .whats svg{display:block}
 
@@ -113,19 +112,18 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 </head>
 <body>
 
-<!-- TOPBAR -->
+<!-- NAV -->
 <div class="topbar">
   <div class="container inner">
     <a class="brand" href="#" aria-label="MatchWork">
+      <!-- LOGO roxa correta -->
       <img src="assets/logo-purple.PNG" alt="Logo MatchWork" loading="lazy" decoding="async">
     </a>
-
     <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
       <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
         <path d="M3 6h18M3 12h18M3 18h18" stroke="#3b3b3b" stroke-width="2" stroke-linecap="round"/>
       </svg>
     </button>
-
     <nav class="nav-links" aria-label="principal">
       <a href="#o-que-e">O que é</a>
       <a href="#bemmatch">Bem+Match</a>
@@ -140,11 +138,10 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 <header class="hero">
   <div class="container hero-grid">
     <div>
-      <span class="badge">Empregos • Like/Dislike • Trilhas • Bem+</span>
       <h1>Encontre gente certa, rápido.</h1>
       <p class="lead">
-        Para <b>empresas</b>: publique a vaga, receba <b>matches</b> compatíveis em minutos e conduza tudo num fluxo simples.<br>
-        Para <b>candidatos</b>: vagas que combinam com seu perfil, trilhas de aprendizagem e apoio <b>Bem+</b>.
+        <b>Empresas:</b> publique a vaga, receba <b>matches</b> compatíveis em minutos e conduza tudo num fluxo simples.<br>
+        <b>Candidatos:</b> vagas que combinam com seu perfil, trilhas de aprendizado e apoio <b>Bem+</b>.
       </p>
       <div style="display:flex;gap:10px;flex-wrap:wrap">
         <a class="btn primary" href="#planos">Ver planos</a>
@@ -152,21 +149,22 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
       </div>
     </div>
 
+    <!-- MOCKUP correto -->
     <div class="mock" aria-label="Mockup do app (like/dislike)">
-      <img src="assets/mockup.PNG" alt="Tela com cartões de candidatos e botões de like/dislike">
+      <img src="assets/mockup.PNG" alt="Tela do app com cartões e botões de like/dislike">
     </div>
   </div>
 </header>
 
-<!-- O QUE FAZ -->
+<!-- O QUE O MATCHWORK FAZ -->
 <section id="o-que-e" class="section band">
   <div class="container">
-    <h2>O que o MatchWork faz</h2>
-    <p class="sub">Integramos matching rápido, capacitação e bem-estar para melhorar contratação e evolução profissional.</p>
+    <h2>Como o MatchWork ajuda</h2>
+    <p class="sub">Tudo que você precisa para contratar rápido e evoluir as pessoas no dia a dia.</p>
     <div class="grid-3">
-      <div class="card"><h3>Matching inteligente</h3><p>Like/dislike dos dois lados + recomendações por perfil e competências.</p></div>
-      <div class="card"><h3>Trilhas de capacitação</h3><p>Aprendizado direcionado por cargo/nível, com parceiros educacionais.</p></div>
-      <div class="card"><h3>Relatórios úteis</h3><p>Indicadores de empregabilidade e inclusão para apoiar decisões.</p></div>
+      <div class="card"><h3>Matching like/dislike</h3><p>Busca, filtros e recomendações por perfil e competências — rápido e direto.</p></div>
+      <div class="card"><h3>Trilhas de capacitação</h3><p>Jornadas por cargo/nível com parceiros educacionais e feedback contínuo.</p></div>
+      <div class="card"><h3>Relatórios úteis</h3><p>Indicadores de empregabilidade e recortes de inclusão para decisões práticas.</p></div>
     </div>
   </div>
 </section>
@@ -175,10 +173,10 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 <section id="bemmatch" class="section">
   <div class="container">
     <h2>Bem+Match</h2>
-    <p class="sub">Conteúdos de apoio emocional, rotinas simples e encontros em grupo — foco na confiança e constância.</p>
+    <p class="sub">Conteúdos de apoio emocional, rotinas simples e encontros em grupo para fortalecer confiança e consistência.</p>
     <div class="grid-2">
-      <div class="card"><h3>Para candidatos</h3><p>Materiais curtos, rotinas de bem-estar e espaço de compartilhamento para reduzir ansiedade de busca e entrevistas.</p></div>
-      <div class="card"><h3>Para empresas</h3><p>Trilhas de integração e materiais de saúde mental para reforçar adaptação nos primeiros meses.</p></div>
+      <div class="card"><h3>Para candidatos</h3><p>Materiais curtos e aplicáveis, rotinas de bem-estar e espaço de troca para buscar e trabalhar melhor.</p></div>
+      <div class="card"><h3>Para empresas</h3><p>Pílulas de integração e saúde mental que facilitam adaptação nos primeiros meses.</p></div>
     </div>
   </div>
 </section>
@@ -187,10 +185,10 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 <section id="gamificacao" class="section band">
   <div class="container">
     <h2>Gamificação — MatchPoints</h2>
-    <p class="sub">Pontos por ações úteis (perfil completo, entrevistas, trilhas concluídas). Resgate por destaque no app, conteúdos Bem+ e parceiros.</p>
+    <p class="sub">Pontos por ações que importam (perfil, entrevistas, trilhas). Troque por destaque no app, conteúdos Bem+ e benefícios de parceiros.</p>
     <div class="grid-2">
-      <div class="card"><h3>+Engajamento</h3><p>Mais candidatos prontos e ativos nas trilhas.</p></div>
-      <div class="card"><h3>+Visibilidade</h3><p>Destaques por mérito e consistência.</p></div>
+      <div class="card"><h3>+Engajamento</h3><p>Gente mais ativa e pronta para as vagas.</p></div>
+      <div class="card"><h3>+Visibilidade</h3><p>Destaque por mérito e constância.</p></div>
     </div>
   </div>
 </section>
@@ -198,19 +196,19 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 <!-- PLANOS -->
 <section id="planos" class="section">
   <div class="container">
-    <h2>Nossos Planos</h2>
-    <p class="sub">Escolha o que funciona melhor para sua operação. Simples para começar rápido.</p>
+    <h2>Planos</h2>
+    <p class="sub">Simples para começar agora. Mensal ou anual — você escolhe.</p>
 
     <h3 style="margin:16px 0 8px">Empresas</h3>
     <div class="pricing">
       <div class="price-card">
-        <h3>Assinatura mensal</h3>
+        <h3>Assinatura</h3>
         <div class="price"><span class="amount">R$150</span><span class="small">/mês</span></div>
         <div class="li">Publicações ilimitadas</div>
         <div class="li">Banco de talentos + recomendações</div>
         <div class="li">Relatórios básicos</div>
         <a class="btn primary" href="#contato" style="margin-top:8px">Assinar mensal</a>
-        <div class="li" style="margin-top:10px"><b>Ou anual:</b> R$ 1.500/ano (economia de 2 meses)</div>
+        <div class="li" style="margin-top:10px"><b>Ou anual:</b> R$ 1.500/ano (2 meses de economia)</div>
         <a class="btn ghost" href="#contato" style="margin-top:6px">Assinar anual</a>
       </div>
 
@@ -252,9 +250,9 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 <section id="contato" class="section band">
   <div class="container">
     <h2 style="text-align:center">Fale com a gente</h2>
-    <p class="sub">Quer pilotar o MatchWork, contratar ou tirar dúvidas? Envie sua mensagem.</p>
+    <p class="sub">Quer testar o MatchWork, contratar ou tirar dúvidas? Envie sua mensagem.</p>
 
-    <!-- Envia direto para contato@appmatchwork.com.br via FormSubmit -->
+    <!-- envia para contato@appmatchwork.com.br -->
     <form id="contact-form" action="https://formsubmit.co/contato@appmatchwork.com.br" method="POST" class="form" aria-label="Formulário de contato">
       <input class="input" name="nome" placeholder="Seu nome" required aria-label="Seu nome">
       <input class="input" type="email" name="email" placeholder="E-mail" required aria-label="Seu e-mail">
@@ -265,16 +263,16 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
         <option value="profissional">Profissional já empregado</option>
         <option value="organizacao">Organização/Parceria</option>
       </select>
-      <textarea class="input" name="mensagem" rows="4" placeholder="Sua mensagem" required aria-label="Sua mensagem"></textarea>
+      <textarea class="input" name="mensagem" rows="4" placeholder="Como podemos ajudar?" required aria-label="Sua mensagem"></textarea>
 
-      <!-- FormSubmit options -->
+      <!-- FormSubmit opts -->
       <input type="hidden" name="_subject" value="Novo contato — Site MatchWork">
       <input type="hidden" name="_template" value="box">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_next" value="https://appmatchwork.com.br/#contato-ok">
       <input type="text" name="_honey" style="display:none">
 
-      <button class="btn primary" type="submit" style="width:max-content" aria-label="Enviar formulário de contato">Enviar</button>
+      <button class="btn primary" type="submit" style="width:max-content">Enviar</button>
     </form>
 
     <p id="contato-ok" class="sub" style="margin-top:12px;display:none">Obrigado! Sua mensagem foi enviada.</p>
@@ -285,7 +283,7 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
   <div class="container">© 2025 MatchWork — Transformando o mercado de trabalho. • <a href="https://appmatchwork.com.br">appmatchwork.com.br</a></div>
 </footer>
 
-<!-- Botão flutuante de WhatsApp -->
+<!-- WhatsApp flutuante -->
 <a class="whats" href="https://wa.me/5547999639417" target="_blank" rel="noopener" aria-label="Falar no WhatsApp">
   <svg width="26" height="26" viewBox="0 0 24 24" fill="none">
     <path d="M20.5 3.5A10.5 10.5 0 1 0 4.6 19.4L3 22l2.7-1.6A10.5 10.5 0 1 0 20.5 3.5Z" stroke="#fff" stroke-width="2"/>
@@ -299,7 +297,7 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 /* menu mobile */
 const toggle = document.querySelector('.menu-toggle');
 const links = document.querySelector('.nav-links');
-if(toggle && links){
+if (toggle && links){
   toggle.addEventListener('click', ()=>{
     const open = links.classList.toggle('open');
     toggle.setAttribute('aria-expanded', open ? 'true' : 'false');
@@ -309,18 +307,14 @@ if(toggle && links){
   });
 }
 
-/* Toast + GA4 lead */
+/* toast + GA lead */
 (function(){
   const form = document.getElementById('contact-form');
   const toast = document.getElementById('toast');
   if(form){
     form.addEventListener('submit', ()=>{
       if (typeof gtag === 'function') {
-        gtag('event', 'generate_lead', {
-          form_location: 'contato_section',
-          lead_type: 'site_contact',
-          page_path: location.pathname
-        });
+        gtag('event', 'generate_lead', { form_location:'contato', page_path:location.pathname });
       }
       if (toast){
         setTimeout(()=>{ toast.style.display='block'; setTimeout(()=>toast.style.display='none', 4000); }, 600);
@@ -329,13 +323,13 @@ if(toggle && links){
   }
 })();
 
-/* GA4: clique no WhatsApp */
+/* GA: clique no WhatsApp */
 (function(){
   const whats = document.querySelector('.whats');
   if (whats){
     whats.addEventListener('click', ()=>{
       if (typeof gtag === 'function') {
-        gtag('event', 'click_whatsapp', { location: 'floating_button', page_path: location.pathname });
+        gtag('event', 'click_whatsapp', { location:'floating_button', page_path:location.pathname });
       }
     });
   }
